# next

./: ADAPTIVE_NEURON_USE_CASES.md  ADDITIONAL_BOOKS_IMPLEMENTATION_SUMMARY.md  ADDITIONAL_IMPROVEMENTS_ANALYSIS.md  AGENTIC_SYSTEMS_IMPLEMENTATION.md  AGENT_COMPARTMENTS_IMPLEMENTATION.md  AGENT_ENHANCEMENTS_IMPLEMENTATION.md  AGENT_STRUCTURE_ANALYSIS.md  AI_AGENTS_LLM_RAG_KG_IMPLEMENTATION.md  AI_AGENT_ROADMAP.md  AI_CONCEPTS_MATH_FOUNDATIONS_IMPLEMENTATION.md  AI_PROMPT_SYSTEM_GUIDE.md  ALL_8_KERNELS_PERFORMANCE_COMPARISON.md  ANCIENT_PHILOSOPHY_RELIGION_VALUE_ANALYSIS.md  APP_IDEAS_WITH_ML_TOOLBOX.md  ARCHITECTURE_OPTIMIZATION_RESULTS.md  AUTOMATIC_FEATURE_CREATION_GUIDE.md  BEYOND_EXPECTED_EXPANSIONS.md  BUSINESS_PLAN.md  COMPARTMENT1_DATA_GUIDE.md  COMPREHENSIVE_PIPELINE_TEST_RESULTS.md  COMPREHENSIVE_TEST_RESULTS_AFTER_OPTIMIZATIONS.md  COMPREHENSIVE_TEST_RESULTS_ANALYSIS.md  CORE_ML_TECHNIQUES_IMPLEMENTATION.md  CORPUS_CALLOSUM_PREPROCESSOR_GUIDE.md  CRITICAL_ADDITIONS_ANALYSIS.md  DATA_COLLECTION_PIPELINE_COMPLETE.md  DATA_LEARNING_CYBERSECURITY_ANALYSIS.md  DATA_PREPROCESSING_GUIDE.md  DATA_PREPROCESSING_WITH_KERNELS.md  DATA_PROCESSING_PERFORMANCE_REPORT.md  DATA_SCRUBBING_GUIDE.md  DEEP_LEARNING_IMPLEMENTATION_SUMMARY.md  Dockerfile  FIX_DEPENDENCIES.bat  FUTURE_IMPROVEMENTS.md  GAME_IDEAS.md  GAME_THEORY_IMPLEMENTATION_SUMMARY.md  GENERATIVE_AI_DESIGN_PATTERNS_BENEFITS.md  GPU_ACCELERATION_GUIDE.md  HOW_AI_CODE_GENERATION_WORKS.md  (+182 more)
ai/: QUICKSTART.md  README.md  USAGE.md  __init__.py  components.py  core.py  examples.py  test_system.py
api/: __init__.py  main.py  server.py
examples/: advanced_algorithms_ml_examples.py  advanced_toolbox_demo.py  automatic_features_demo.py  complete_workflow_example.py  data_collection_pipeline_example.py  data_preprocessing_pipeline.py  data_scrubbing_normalization_demo.py  game_theory_examples.py  information_theory_integration_example.py  knuth_ml_examples.py  network_ml_examples.py  personalized_assistant.py  phase3_examples.py  philosophy_religion_examples.py  pipeline_enhanced_features_example.py  recommendation_engine.py  science_fiction_examples.py  statistical_learning_demo.py  (+2 more)
(+258 files in other folders)
