[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-toolbox"
version = "1.0.0"
description = "Comprehensive Machine Learning Toolbox with AI Agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DJMcC"}
]
keywords = ["machine-learning", "ml", "ai", "agents", "toolbox", "scikit-learn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
full = [
    "imbalanced-learn>=0.8.0",
    "statsmodels>=0.13.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "tensorflow>=2.8.0",
    "torch>=1.11.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.20.0",
    "shap>=0.40.0",
    "lime>=0.2.0",
    "pgmpy>=0.1.19",
    "hmmlearn>=0.2.7",
    "psutil>=5.9.0",
    "py-cpuinfo>=8.0.0",
    "h5py>=3.7.0",
    "joblib>=1.1.0",
    "flask>=2.2.0",
    "flask-cors>=3.0.10",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
    "tqdm>=4.64.0",
    "python-dateutil>=2.8.0",
]
advanced = [
    "imbalanced-learn>=0.8.0",
    "statsmodels>=0.13.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]
deep-learning = [
    "tensorflow>=2.8.0",
    "torch>=1.11.0",
]
nlp = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.20.0",
]
interpretability = [
    "shap>=0.40.0",
    "lime>=0.2.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
]

[tool.setuptools]
packages = ["ml_toolbox"]

[tool.setuptools.package-data]
ml_toolbox = ["*.md", "*.txt"]
